# memdb

./: .gitignore  LICENSE.md  README.md
client/: .editorconfig  build.gradle.kts  memdb.sh  settings.gradle.kts
client/app/: build.gradle.kts
client/app/src/main/kotlin/com/janssen/memdb/: InteractiveMode.kt  Main.kt  MemDB.kt
client/app/src/test/kotlin/com/janssen/memdb/: HistogramTest.kt
client/config/detekt/: detekt.yml
client/gradle/: libs.versions.toml
client/lib/: build.gradle.kts
client/lib/src/main/kotlin/com/janssen/memdb/: AnsiColor.kt  Client.kt  Constants.kt  Diff.kt  HeapOperation.kt  Histogram.kt  Marker.kt  PeekingIterator.kt  TrackedHeap.kt
client/lib/src/main/proto/com/janssen/memdb_client/: message.proto
client/src/main/kotlin/com/janssen/heap_tracker_client/: Client.kt  Diff.kt  Histogram.kt  Main.kt  TrackedHeap.kt
client/src/main/kotlin/com/janssen/memdb/: Client.kt  Diff.kt  HeapOperation.kt  Histogram.kt  Main.kt  Marker.kt  PeekingIterator.kt  TrackedHeap.kt
client/src/main/proto/com/janssen/heap_tracker_client/: message.proto
client/src/test/kotlin/com/janssen/memdb/: DiffTest.kt  HeapOperationTest.kt  HistogramTest.kt  MarkerTest.kt  TrackedHeapTest.kt
common/src/protos/: message.proto
e2e/: connection.sh
server/: Cargo.toml  build.rs
server/examples/: checked_wrapper.rs  grow_vec.rs  growing_vec.rs  indexed_markers.rs  json_parse.rs  multiple_markers.rs
server/src/: hook.rs  lib.rs  main.rs  server.rs
server/src/protos/: message.proto
test/: integration.sh
(+4 files in other folders)
