[package]
name = "heap-tracker-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
gettid = "0.1.4"
protobuf = "3.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = "0.3.44"

[build-dependencies]
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.2.0"
