[package]
name = "memdb"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
gettid = "0.1.4"
protobuf = "3.7.2"
time = "0.3.44"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.2.0"

[lib]
name = "memdb_lib"
path = "src/lib.rs"

[[example]]
name = "json_parse"
path = "examples/json_parse.rs"

[[example]]
name = "grow_vec"
path = "examples/grow_vec.rs"

[[example]]
name = "indexed_markers"
path = "examples/index_markers.rs"
